--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.0.5",
-    "prop-types": "^15.6.2"
+    "prop-types": "^15.6.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.7",
+    "@fortawesome/free-solid-svg-icons": "^5.4.2",
+    "@fortawesome/react-fontawesome": "^0.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
